# ChangeLog for net-news/leechcraft-aggregator
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-news/leechcraft-aggregator/ChangeLog,v 1.17 2012/07/19 20:11:31 maksbotan Exp $

*leechcraft-aggregator-0.5.75 (19 Jul 2012)

  19 Jul 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-aggregator-0.5.75.ebuild, -leechcraft-aggregator-0.4.99.ebuild,
  -leechcraft-aggregator-0.5.0.ebuild, -leechcraft-aggregator-0.5.60.ebuild,
  -leechcraft-aggregator-0.5.65.ebuild:
  Removed old versions, bumped to 0.5.75

  15 Jul 2012; Michael Palimaka <kensington@gentoo.org>
  leechcraft-aggregator-0.4.99.ebuild, leechcraft-aggregator-0.5.0.ebuild,
  leechcraft-aggregator-0.5.60.ebuild, leechcraft-aggregator-0.5.65.ebuild,
  leechcraft-aggregator-0.5.70.ebuild, leechcraft-aggregator-9999.ebuild:
  Add missing slot dependencies on Qt.

  07 Jul 2012; Johannes Huber <johu@gentoo.org>
  leechcraft-aggregator-0.5.70.ebuild:
  Stable for x86, wrt bug #424613

  04 Jul 2012; Agostino Sarubbo <ago@gentoo.org>
  leechcraft-aggregator-0.5.70.ebuild:
  Stable for amd64, wrt bug #424613

*leechcraft-aggregator-0.5.70 (31 May 2012)

  31 May 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-aggregator-0.5.70.ebuild:
  Bump LeechCraft to 0.5.70 "Hessian Blade"

*leechcraft-aggregator-0.5.65 (22 Apr 2012)

  22 Apr 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-aggregator-0.5.65.ebuild:
  Bump net-news/leechcraft-aggregator to 0.5.65, thanks to 0xd34df00d

  07 Apr 2012; Markus Meier <maekke@gentoo.org>
  leechcraft-aggregator-0.4.99.ebuild:
  x86 stable, bug #400605

*leechcraft-aggregator-0.5.60 (20 Mar 2012)

  20 Mar 2012; Maxim Koltsov <maksbotan@gentoo.org>
  +leechcraft-aggregator-0.5.60.ebuild:
  Bump LeechCraft to 0.5.60, thank to 0xd34df00d

  09 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org>
  leechcraft-aggregator-0.5.0.ebuild, leechcraft-aggregator-9999.ebuild:
  Added missing (R)DEPEND to 0.5.0 and 9999
