@@ -1,6 +1,12 @@
 # ChangeLog for net-news/leechcraft-aggregator
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-news/leechcraft-aggregator/ChangeLog,v 1.17 2012/07/19 20:11:31 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/leechcraft-aggregator/ChangeLog,v 1.18 2012/08/13 14:12:50 maksbotan Exp $
+
+*leechcraft-aggregator-0.5.80 (13 Aug 2012)
+
+  13 Aug 2012; Maxim Koltsov <maksbotan@gentoo.org>
+  +leechcraft-aggregator-0.5.80.ebuild:
+  Bump LeechCraft to 0.5.80, thanks to 0xd34df00d
 
 *leechcraft-aggregator-0.5.75 (19 Jul 2012)
 
